2011-12-12  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: Removed some debugging messages.

	* modules/pandora_module.h,
	  modules/pandora_module.cc,
	  pandora_windows_service.cc: Fixed pre-conditions (were not working
	  properly).

	* modules/pandora_module_regexp.cc: Improved file status detection and
	  small fixes.

2011-12-09  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: Added a debug message.

	* modules/pandora_module_perfcounter.cc,
	  modules/pandora_module_perfcounter.h,
	  modules/pandora_module_factory.cc: Added support to read the
	  'cooked' value of a performance counter.

2011-11-30  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc,
	  modules/pandora_module_logevent.h: Added support for regular
	  expressions to the pattern filter.

2011-11-29  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_snmpget.cc: Modified the call to snmpget.exe
	  to directly retrieve the value.

2011-11-29  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.h,
	  modules/pandora_module_exec.cc,
	  modules/pandora_module_exec.h,
	  modules/pandora_module_list.cc,
	  modules/pandora_module_factory.cc,
	  modules/pandora_module.cc,
	  Makefile.am: Added native ping and SNMP get modules that wrap the
	  calls to ping.exe and snmpget.exe.

	* modules/pandora_module_ping.h,
	  modules/pandora_module_snmpget.h,
	  modules/pandora_module_ping.cc,
	  modules/pandora_module_snmpget.cc: Added to repository. Ping and
	  SNMP get modules.

2011-11-29  Ramon Novoa  <rnovoa@artica.es>

	* bin/PandoraAgent.exe: Updated to current revision.

2011-11-24  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: Use double instead of long for intermediate
	  result to avoid overflows. Fixes bug #3422900.

	* modules/pandora_module_perfcounter.cc: Print PDH errors in a more
	  descriptive format.

2011-11-22  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.cc: Fixed a bug that resulted in a buffer